--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,8 +5,13 @@
     & .slide{
       height: 350px;
       color: white;
-      background-color: #6B7379;
       position: relative;
+      &1{
+        background-color: #6B7379;
+      }
+      &2{
+        background-color: #283C43;
+      }
       &__wrapper{
         display: flex;
         height: 350px;
@@ -15,7 +20,8 @@
       &__image{
         height: 100%;
         position: absolute;
-        left: 0;
+        left: auto;
+        //transform: translateX(-300px);
         top: 0;
         z-index: 1;
       }
@@ -25,18 +31,63 @@
         text-shadow: 1px 1px 2px #222222;
         &-title{
           font-weight: bold;
-          font-size: 1.5rem;
+          font-size: 34px;
           font-family: $Open;
           line-height: 1.5;
         }
-        &-text{}
+        &-text{
+          font-weight: bold;
+          font-size: 22.5px;
+          font-family: $Open;
+          line-height: 1.5;
+          margin-bottom: 14px;
+        }
         &-btn{
+          padding: 6px 20px;
+          font-size: 17px;
+          font-family: $Open;
+          border: none;
+          cursor: pointer;
           background-color: $black;
         }
       }
     }
   }
 
+  &category{
+    padding: 40px 0 ;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+
+
+  }
+  &cardBlock{
+    padding: 25px 0;
+
+    &-row{
+      display: flex;
+      flex-wrap: wrap;
+
+    }
+    &-title{
+      margin-bottom: 15px;
+      font-size: 26px;
+      font-family: $Open;
+      font-weight: bold;
+      color: $black;
+      line-height: 1.3;
+    }
+    &-subtitle{
+      font-size: 15px;
+      color: $grey;
+      font-weight: 400;
+      line-height: 1.5;
+      cursor: pointer;
+    }
+  }
+
 
 }
 }
+
