--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -3,7 +3,8 @@
 
   &slider{
     & .slide{
-      height: 350px;
+      height: 400px;
+      max-height: 35vw;
       color: white;
       position: relative;
       &1{
@@ -13,12 +14,16 @@
         background-color: #283C43;
       }
       &__wrapper{
+        padding: 0 10px;
         display: flex;
-        height: 350px;
+        height: 400px;
+        max-height: 35vw;
         align-items: center;
       }
       &__image{
+        transform: translateX(-10%);
         height: 100%;
+        max-height: 35vw;
         position: absolute;
         left: auto;
         //transform: translateX(-300px);
@@ -26,6 +31,7 @@
         z-index: 1;
       }
       &__caption{
+        padding: 0 60px;
         position: relative;
         z-index: 30;
         text-shadow: 1px 1px 2px #222222;
@@ -58,17 +64,16 @@
     padding: 40px 0 ;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-
+    gap: 20px;
 
   }
   &cardBlock{
-    padding: 25px 0;
+    padding: 30px 0;
 
     &-row{
       display: flex;
       flex-wrap: wrap;
-
+      gap: 20px;
     }
     &-title{
       margin-bottom: 15px;
@@ -84,6 +89,18 @@
       font-weight: 400;
       line-height: 1.5;
       cursor: pointer;
+    }
+  }
+
+  &salesStimulus{
+    display: flex;
+    justify-content: space-around;
+    margin: 0 -15px;
+    flex-wrap: wrap;
+    gap: 20px;
+    &-block{
+      max-width: 220px;
+      display: inline-block;
     }
   }
 
