--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -59,6 +59,9 @@
       }
     }
   }
+  &productCard{
+    width: calc(25% - 15px);
+  }
 
   &category{
     padding: 40px 0 ;
@@ -68,7 +71,7 @@
 
   }
   &cardBlock{
-    padding: 30px 0;
+    padding: 0 0 40px ;
 
     &-row{
       display: flex;
