--- a/src/scss/productPage.scss
+++ b/src/scss/productPage.scss
@@ -17,6 +17,7 @@
         flex-wrap: wrap;
         gap: 4px;
         &-block{
+          display: inline-block;
           width: 70px;
           border-radius: 4px;
           border: 1px solid rgba(0, 0, 0, 0.1);
