--- a/src/scss/categoryCard.scss
+++ b/src/scss/categoryCard.scss
@@ -20,8 +20,9 @@
      position: absolute;
      bottom: 0;
      left: 0;
+     color: white;
      right: -10px;
-     padding: 30px 20px 7px ;
+     padding: 30px 20px 15px ;
      border-radius: 0 0 0.37rem 0.37rem;
      background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.5) 100%);
    }
