--- a/src/scss/productPage.scss
+++ b/src/scss/productPage.scss
@@ -9,6 +9,13 @@
       &-image{
         width: 100%;
       }
+      &-galleryImage{
+        width: 100%;
+        height: 60px;
+      }
+      &-backImg{
+        height: 360px;
+      }
       &-loading{
         width: 100%;
         height: 350px;
@@ -26,8 +33,10 @@
       }
       &-images{
         min-width: 40%;
+        width: 40%;
       }
       &-gallery{
+        margin-top: 25px;
         display: flex;
         flex-wrap: wrap;
         gap: 4px;
