--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,7 +27,16 @@ input:focus{
   padding: 0 15px;
 }
 
-
+.swiper-button-next,
+.swiper-button-prev {
+  //background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
+  right:10px;
+  padding: 30px;
+  color: #000 !important;
+  fill: black !important;
+  stroke: black !important;
+}
 
 
 
