--- a/src/scss/productCard.scss
+++ b/src/scss/productCard.scss
@@ -44,7 +44,7 @@
       right: 15px;
       transition: all .2s;
       cursor: pointer;
-      opacity: .4;
+      //opacity: .4;
       &:hover{
         opacity: 1;
       }
