--- a/src/scss/productCard.scss
+++ b/src/scss/productCard.scss
@@ -48,6 +48,9 @@
       &:hover{
         opacity: 1;
       }
+      &-default{
+        opacity: .3;
+      }
     }
     &img{
       width: 100%;
