product add to favorites with multiple categories search

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -13,6 +13,9 @@
       &2{
         background-color: #283C43;
       }
+      &2{
+        background-color: #283C43;
+      }
       &__wrapper{
         padding: 0 10px;
         display: flex;
