--- a/src/scss/basket.scss
+++ b/src/scss/basket.scss
@@ -2,6 +2,7 @@
   display: flex;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  margin-bottom: 50px;
   &__{
 
     &list{
@@ -9,12 +10,39 @@
       flex-direction: column;
       width: 70%;
       border-right: 1px solid rgba(0, 0, 0, 0.1);
+      &-empty{
+        text-align: center;
+        padding: 18px;
+        &_title{
+          font-size: 30px;
+          margin-bottom: 8px;
+          font-weight: bold;
+          line-height: 1.3;
+        }
+        &_text{
+          margin-bottom: 22px;
+          font-size: 15px;
+          color: #969696;
+        }
+        &_link{
+          cursor: pointer;
+          color: #292929;
+          &:hover{
+            color: #ffc107;
+          }
+        }
+        &_img{
+          width: 250px;
+        }
+      }
+    }
+    &card:not(:last-child){
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
     &card{
       padding: 18px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       &-img{
         border: 1px solid rgba(0, 0, 0, 0.1);
         height: 80px;
@@ -59,6 +87,37 @@
     &info{
       padding: 18px;
       width: 30%;
+      &-block{
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 7.5px;
+      }
+      &-block:not(:last-child){
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      }
+      &-sale{
+        color: red;
+      }
+
+        &-code{
+        position: relative;
+        display: flex;
+      }
+      &-input{
+        padding: 0.45rem 0.85rem;
+        border-radius: 0.37rem;
+        border: 1px solid #ced4da;
+        flex: 1 1 auto;
+        max-width: 80%;
+      }
+      &-nums{
+        font-size: 12px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
       &-title{
         font-size: 15px;
         font-weight: 700;
@@ -66,12 +125,31 @@
         margin-bottom: 5px;
         line-height: 1.5;
       }
-      &-nums{
-        font-size: 12px;
-
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+      &-btn{
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        height: 43px;
+        margin: 0 5px;
+        font-size: 15px;
+        font-weight: 600;
+        cursor: pointer;
+        display: block;
+        &_link{
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+        &:hover{
+          border: 1px solid $black;
+          transition: all .2s;
+        }
+        &.active{
+          background-color: $black;
+          color: white;
+        }
       }
     }
 
