--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,32 @@
 .footer{
   margin-top: 15px;
+  background: #141414;
+  color: white;
+  padding: 40px 0;
   &__{
 
+    &wrapper{
+      display: flex;
+    }
+    &block{
+      min-width: 200px;
+      margin-right: 20px;
+      &-title{
+        font-size: 19px;
+        font-weight: 600;
+        line-height: 1.3;
+      }
+      &-list{
+        margin-top: 15px;
+      }
+      &-link{
+        margin-bottom: 5px;
+        font-size: 15px;
+        cursor: pointer;
+        font-weight: 400;
+        line-height: 1.5;
+      }
+    }
 
 
 
