--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,6 @@
 .header{
   padding: 30px 0;
+  z-index: 12;
 }
 .header{
   display: flex;
@@ -104,6 +105,9 @@
       position: relative;
       &-favorites, &-cart{
         position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &.shake {
           animation: shakeCart .4s ease-in-out forwards;
         }
@@ -159,7 +163,7 @@
       background-color: #f7f7f7 !important;
       position: sticky;
       top: 0;
-      z-index: 9;
+      z-index: 11;
       &-nav{
         display: flex;
         gap: 30px;
@@ -229,6 +233,20 @@
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 1);
         background-color: #fff;
       }
+      &-drop{
+        position: absolute;
+        top: 0;
+        right: 1px;
+        font-weight: 400;
+        min-height: 100%;
+        display: grid;
+        grid-template-rows: 50px ;
+        //max-height: 60vh;
+        grid-template-columns: 200px 200px;
+        transform: translateX(100%);
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 1);
+        background-color: #fff;
+      }
 
     }
 
@@ -257,9 +275,29 @@
 
   }
 }
-//@media (max-width: 716px) {
-//
-//}
+@media (max-width: 700px) {
+  .header{
+    &__contacts{
+      display: none;
+    }
+    &__label{
+      width: 70%;
+    }
+  }
+}
+@media (max-width: 560px) {
+  .header{
+    &__btn-text{
+      display: none;
+    }
+    .logo{
+      width: 40px;
+    }
+    &__label{
+      margin-left: auto;
+    }
+  }
+}
 
 
 
