--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -114,3 +114,20 @@
 }
 }
 
+@media (max-width: 900px) {
+  .home{
+    &__productCard{
+      width: calc(33% - 15px);
+    }
+  }
+}
+@media (max-width: 700px) {
+  .home{
+    &__cardBlock-row{
+      row-gap: 5px;
+    }
+    &__productCard{
+      width: calc(50% - 15px);
+    }
+  }
+}
