--- a/src/scss/productCard.scss
+++ b/src/scss/productCard.scss
@@ -19,32 +19,37 @@
   }
   &__{
 
-    &hover1, &hover2, &hover3{
-      //background-color: #ff000020;
+    &hover{
       width: 100%;
-      height: 20%;
+      height: 60%;
       position: absolute;
+      cursor: pointer;
       right: 0;
       bottom: 30%;
-      //pointer-events: none;
+    }
+    &hover1, &hover2, &hover3{
+      width: 100%;
+      height: 33%;
+      position: absolute;
+      //background-color: #f00;
+      right: 0;
+      bottom: 0;
       cursor: pointer;
     }
     &hover2{
-      bottom: 50%;
+      bottom: 33%;
     }
     &hover3{
-      bottom: 70%;
+      bottom: 66%;
     }
     &like{
       position: absolute;
       display: flex;
       width: fit-content;
       justify-content: flex-end;
-      //width: 90%;
       right: 15px;
       transition: all .2s;
       cursor: pointer;
-      //opacity: .4;
       &:hover{
         opacity: 1;
       }
@@ -73,6 +78,7 @@
       font-size: 1rem;
       color: $black;
       font-weight: 600;
+      margin-top: 15px;
     }
     &price{
       font-family: $Open;
@@ -98,5 +104,19 @@
 
 
 
+  }
+}
+
+@media (max-width: 550px) {
+  .productCard{
+    &__bot{
+      flex-wrap: wrap;
+    }
+    &__btn{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
   }
 }
