--- a/src/scss/productPage.scss
+++ b/src/scss/productPage.scss
@@ -1,5 +1,6 @@
 .product{
   font-family: $Open;
+  margin-top: 30px;
 
   &__{
 
@@ -15,11 +16,11 @@
       }
       &-backImg{
         height: 360px;
+        //max-height: 40vw;
       }
       &-loading{
         width: 100%;
         height: 350px;
-        //background-color: #999;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -29,7 +30,8 @@
       }
       &-imgPlace{
         width: 100%;
-        min-height: 350px;
+        height: 350px;
+        //max-height: 40vw;
       }
       &-images{
         min-width: 40%;
@@ -307,6 +309,29 @@
         background-color: $black;
         transition: all .4s;
         color: white;
+      }
+    }
+  }
+}
+
+
+
+@media (max-width: 760px) {
+  .product{
+    &__top{
+      flex-direction: column;
+      &-images{
+        width: 100%;
+        margin-bottom: 30px;
+      }
+    }
+  }
+}
+@media (max-width: 460px) {
+  .product{
+    &__top{
+      &-variables{
+        padding: 0;
       }
     }
   }
