--- a/src/scss/clothesAdd.scss
+++ b/src/scss/clothesAdd.scss
@@ -19,21 +19,54 @@
 
   }
 
+  &-textarea {
+    width: 100%;
+    height: 200px;
+  }
+
+  &-sizes{
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+    &-text{
+      width: 20%;
+    }
+    &-row{
+      width: 80%;
+      margin: 20px 0;
+      display: flex;
+      column-gap: 20px;
+      flex-wrap: wrap;
+      row-gap: 20px;
+    }
+  }
+
 
   &-block {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    &-check{
+      justify-content: center;
+    }
+
     input {
       width: 50%;
       height: 40px;
       outline: none;
+      &.create__form-input-checkbox{
+        width:25px ;
+        height:25px ;
+      }
     }
+
   }
   &-input {
-    border: 1px solid #E0BEA2;
+
+    border: 3px solid #fa8231;
     padding-left: 15px;
+    border-radius: 10px;
   }
   &-select {
     width: 70px;
