--- a/src/scss/clothesAdd.scss
+++ b/src/scss/clothesAdd.scss
@@ -78,6 +78,7 @@
   &-btn {
     padding: 15px 0;
     background: #E0BEA2;
+    //background: #fcb17e;
     border: none;
     color: white;
     cursor: pointer;
@@ -147,6 +148,9 @@
 .create__size {
   background: black;
   color: white;
+}
+.create__color{
+  border-radius: 50%;
 }
 input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
