--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -31,15 +31,30 @@
       &-select{
         display: block;
       }
-      &-burger{
-        cursor: pointer;
-        display: none;
-        width: 20px;
-        height: 3px;
-        background-color: $black;
-        margin: 15px 0 0 1px;
+      &-trigger{
+        font-size: 30px;
+        text-align: center;
+        padding: 5px 0;
+        width: 40px;
+        height: 40px;
+        background: rgba(217, 217, 217, 0.7);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
         position: absolute;
         top: 0;
+        display: none;
+        justify-content: center;
+        align-items: center;
+      }
+      &-burger{
+        opacity: 0;
+        position: absolute;
+        cursor: pointer;
+        width: 20px;
+        height: 3px;
+        top: 45%;
+        background-color: $black;
+        margin:  1px  auto;
         border-radius: 2px;
         z-index: 10;
         &:before, &:after{
@@ -240,17 +255,26 @@
         &-reset{
           background-color: #fff;
         }
-        &-burger{
+        &-trigger{
           display: block;
           &.active{
+            font-size: 0;
+            border-radius: 80px;
+            transition: all .3s;
+            transition: 0ms font-size;
+          }
+        }
+        &-burger{
+          &.active{
             background-color: transparent;
+            opacity: 1;
           }
           &.active.catalog__sidebar-burger:after{
-            //top: 0;
+            top: 0;
             transform: rotate(-45deg);
           }
           &.active.catalog__sidebar-burger:before{
-            //top: 0;
+            top: 0;
             transform: rotate(45deg);
           }
         }
@@ -266,6 +290,17 @@
   .catalog{
     &__productCard{
       width: calc(50% - 12px);
+    }
+    &__sidebar{
+      min-width: 260px;
+    }
+  }
+}
+@media (max-width: 450px) {
+  .catalog{
+    &__productCard{
+      width: calc(90% - 12px);
+      margin: 0 auto;
     }
     &__sidebar{
       min-width: 260px;
