--- a/src/scss/clothesAdd.scss
+++ b/src/scss/clothesAdd.scss
@@ -22,6 +22,11 @@
 
   }
 
+  &-ul{
+    display: block;
+    width: 100%;
+    text-align-last: right;
+  }
   &-textarea {
     width: 100%;
     height: 200px;
@@ -48,6 +53,7 @@
   &-block {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     &-check{
