--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,31 @@
 .header{
   padding: 30px 0;
   z-index: 12;
+  &__sidebar-burger{
+    cursor: pointer;
+    //display: none;
+    width: 20px;
+    height: 3px;
+    background-color: $black;
+    position: absolute;
+    border-radius: 2px;
+    z-index: 10;
+    &:before, &:after{
+      content: '';
+      transition: all .4s;
+      width: 100%;
+      height: 3px;
+      background-color: $black;
+      position: absolute;
+      border-radius: 2px;
+    }
+    &:before{
+      bottom: -6px;
+    }
+    &:after{
+      top: -6px;
+    }
+  }
 }
 .header{
   display: flex;
@@ -164,11 +189,28 @@
       position: sticky;
       top: 0;
       z-index: 11;
+      &-burger{
+
+        position: relative;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+        background-color: #D9D9D970;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+      }
       &-nav{
         display: flex;
         gap: 30px;
         justify-content: center;
         color: $black;
+        height: auto;
+        &.hidden{
+         height: 40px;
+          //background-color: #f00;
+         overflow: hidden;
+         transition: all 4s;
+        }
       }
       &-link{
         font-family: "Open Sans", sans-serif;
@@ -298,6 +340,31 @@
     }
   }
 }
-
+@media (max-width: 500px) {
+  .header{
+    &__submenu{
+      z-index: 1;
+      width: 100%;
+      &-link{
+        //position: relative;
+      }
+      &-drop{
+        top: 45px;
+        transform: translateX(2%);
+      }
+    }
+   &__menu{
+       &-nav{
+         flex-direction: column;
+       }
+       &-link{
+         position: relative;
+       }
+     &-burger{
+       display: flex;
+     }
+   }
+  }
+}
 
 
