header submenus with change brands

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -1,4 +1,6 @@
-
+.MuiList-root{
+  max-height: 500px;
+}
 
 .catalog{
   padding: 50px 0 100px;
@@ -230,6 +232,7 @@
 
 
 }
+
 
 .demo-simple-select{
   //color: red;
