--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -220,13 +220,17 @@
         cursor: pointer;
         &.more::after{
           display: inline-block;
-          margin-left: 0.255em;
+          margin-left: .255em;
           vertical-align: 0.255em;
           content: "";
           border-top: 0.3em solid;
           border-right: 0.3em solid transparent;
           border-bottom: 0;
           border-left: 0.3em solid transparent;
+        }
+        &.more:hover:after{
+          transition: .9s;
+          transform: rotateX(180deg);
         }
         &:hover{
           color: rgba(0, 0, 0, .6);
@@ -256,10 +260,12 @@
         cursor: pointer;
         &:hover{
           background-color: #e4e4e4;
+          padding-right: 8px;
+          transition: all .3s;
         }
         &.more::before {
           position: absolute;
-          right: 0;
+          right: 900px;
         }
       }
       &-categories{
