--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -1,4 +1,6 @@
 .order{
+  display: flex;
+
   .order__form-custom_radio {
     position: relative;
   }
@@ -8,7 +10,7 @@
       width: 50%;
       padding: 15px 30px;
       //border-right: 2px solid #6B7379;
-      box-shadow: 2px 0 rgba(0, 0, 0, 0.2);
+      //box-shadow: 2px 0 rgba(0, 0, 0, 0.2);
       &-block{
         margin-bottom: 30px;
         display: flex;
@@ -51,6 +53,67 @@
       &-btn{
         padding: 0 15px;
       }
+    }
+
+    &info{
+      box-shadow: inset 2px 0 4px -2px #cccccc;
+      height: auto;
+      padding: 15px 30px 45px;
+      width: 50%;
+      &-box{
+        padding: 15px 0;
+        margin-bottom: 15px;
+        //width: 100%;
+        &.borders{
+          border-top: 1px solid #cccccc;
+          border-bottom: 1px solid #cccccc;
+        }
+      }
+      &-product{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &Price{
+          font-size: 18px;
+          font-weight: bold;
+          margin-left: auto;
+        }
+      }
+      &-total{
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        color: #343a40;
+        & span:nth-child(1){
+          font-size: 19px;
+          font-weight: 400;
+          line-height: 1.5;
+        }
+        & span:nth-child(2){
+          font-size: 25px;
+          font-weight: bold;
+        }
+
+      }
+      &-subtotal{
+        line-height: 28px;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        color: #343a40;
+        & span:nth-child(1){
+          font-size: 15px;
+          flex: 1 1 160px;
+          font-weight: 400;
+          line-height: 1.5;
+        }
+        & span:nth-child(2){
+          font-size: 18px;
+          font-weight: bold;
+          //line-height: 1;
+        }
+      }
+
     }
 
   }
